--- a/Mint/index.html
+++ b/Mint/index.html
@@ -41,6 +41,6 @@
         <p>&copy; 2024 NFT Marketplace. All rights reserved.</p>
     </footer>
 
-    <script src="connectWallet.js"></script>
+    <script type="module" src="connectWallet.js"></script>
 </body>
 </html>
