--- a/Mint/nft-details.html
+++ b/Mint/nft-details.html
@@ -54,6 +54,6 @@
         <p>&copy; 2024 NFT Marketplace. All rights reserved.</p>
     </footer>
 
-    <script src="nftDetails.js"></script>
+    <script type="module" src="nftDetails.js"></script>
 </body>
 </html>
