--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <p>This is a simple page to test Web3 functionalities.</p>
 </main>
 
-<script src="app.js"></script>
+<script src="walletConnector.js"></script>
+
 </body>
 </html>
