--- a/minter.html
+++ b/minter.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Mint NFT</title>
+    <script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.min.js"></script>
+
 </head>
 <body>
     <h1>Mint Your NFT</h1>
@@ -11,7 +13,8 @@
         <input type="text" id="metadataURI" name="metadataURI" required>
         <button type="submit">Mint NFT</button>
     </form>
-
+<script src="walletConnector.js"></script>
     <script src="mintNFT.js"></script>
+    
 </body>
 </html>
